config/ingress/spsp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spsp
  namespace: openfaas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app: faas-netesd
spec:
  tls:
  - hosts:
    - "*.$(RootDomain)"
    secretName: wildcard-$(RootDomain)-cert
  rules:
  - host: 'pay.$(RootDomain)'
    http:
      paths:
      - path: /
        backend:
          serviceName: receipt-verifier
          servicePort: 3000
      - path: /receipts
        backend:
          serviceName: receipt-verifier
          servicePort: 3000
